--- a/main.css
+++ b/main.css
@@ -1,33 +1,95 @@
 body{
-    background-color: black;
+    background-color: rgba(3, 2, 14, 0.993);
 }
-.background{
-background-color: rgba(255, 255, 255, 0.15);
+#background{
+background-color: #ffffff25;
 width: 400px;
-height: 520px;
+height: 530px;
 position: absolute;
 left: 50%;
 top: 50%;
 transform: translate(-50%, -50%);
-border-radius: 12px;
+border-radius: 10px;
 }
 .circle{
-    background-color: aqua;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-100px, -100px);
-}
-.circle1{
-    background-color: red;
+    background: linear-gradient(#0552aa ,#109fd8);
     width: 200px;
     height: 200px;
     border-radius: 50%;
     position: absolute;
     right: 50%;
-    bottom: 50%;
-    transform: translate(100px, 100px);
+    top: 3%;
+    transform: translate(-90px, -90px);
+}
+.circle1{
+    background: linear-gradient(#f58d2c ,#be7405);
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    top: 58%;
+    transform: translate(90px, 90px);   
+}
+form{
+    width: 390px;
+    height: 530px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    margin-left: 30px;
+}
+h1{
+    color: white;
+    font-family: sans-serif;
+    font-weight: lighter;
+    margin-top: 15%;
+    margin-bottom: 8%;
+    text-indent: 85px;
+    
+   
+}
+label{
+    color: white;
+    font-family: sans-serif;
+    font-weight: 500;
+}
+#username{
+    width: 325px;
+    height: 48px;
+    margin-right: 8px;
+    margin-top: 8px;
+    margin-bottom: 10%;
+    border-radius: 5px;
+    background-color: #ffffff15;
+    border-style: none;
+    text-indent: 8px;
+}
+#password{
+    width: 325px;
+    height: 48px;
+    margin-right: ;
+    margin-bottom: 12%;
+    margin-top: 8px;
+    border-radius: 5px;
+    background-color: #ffffff15;
+    border-style: none;
+    text-indent: 8px;
+    
+}
+button{
+    width: 330px;
+    height: 50px;
+    margin-right: 5%;
+    font-size: 18px;
+    font-family: sans-serif;
+    font-weight: bold;
+    border-radius: 5px;
+    border-style: none;
+}
+::placeholder{
+    color: rgb(252, 250, 250);
+    font-family: sans-serif;
+    font-size: 14px;
 }
