solved a flagged problem

--- a/main.css
+++ b/main.css
@@ -69,7 +69,7 @@ label{
 #password{
     width: 325px;
     height: 48px;
-    margin-right: ;
+    margin-right: 8px;
     margin-bottom: 12%;
     margin-top: 8px;
     border-radius: 5px;
