--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body{
     background-color: rgba(3, 2, 14, 0.993);
 }
 #background{
-background-color: #ffffff25;
+background-color:#ffffff33;
 width: 400px;
 height: 530px;
 position: absolute;
@@ -22,13 +22,13 @@ border-radius: 10px;
     transform: translate(-90px, -90px);
 }
 .circle1{
-    background: linear-gradient(#f58d2c ,#be7405);
+    background: linear-gradient(#97510f ,#f5a021);
     width: 200px;
     height: 200px;
     border-radius: 50%;
     position: absolute;
     left: 50%;
-    top: 58%;
+    top: 60%;
     transform: translate(90px, 90px);   
 }
 form{
@@ -41,9 +41,10 @@ form{
     margin-left: 30px;
 }
 h1{
+
     color: white;
     font-family: sans-serif;
-    font-weight: lighter;
+    font-weight:lighter ;
     margin-top: 15%;
     margin-bottom: 8%;
     text-indent: 85px;
@@ -52,17 +53,18 @@ h1{
 }
 label{
     color: white;
+    font-size: 17px;
     font-family: sans-serif;
-    font-weight: 500;
+    font-weight: lighter;
 }
 #username{
     width: 325px;
     height: 48px;
     margin-right: 8px;
     margin-top: 8px;
-    margin-bottom: 10%;
+    margin-bottom: 8%;
     border-radius: 5px;
-    background-color: #ffffff15;
+    background-color: #ffffff21;
     border-style: none;
     text-indent: 8px;
 }
@@ -73,23 +75,48 @@ label{
     margin-bottom: 12%;
     margin-top: 8px;
     border-radius: 5px;
-    background-color: #ffffff15;
+    background-color: #ffffff21;
     border-style: none;
     text-indent: 8px;
     
 }
-button{
+#button{
     width: 330px;
     height: 50px;
     margin-right: 5%;
+    margin-bottom: 8%;
     font-size: 18px;
     font-family: sans-serif;
     font-weight: bold;
     border-radius: 5px;
     border-style: none;
+    background-color: #ffffff;
 }
 ::placeholder{
-    color: rgb(252, 250, 250);
+    color: rgba(255, 255, 255, 0.733);
     font-family: sans-serif;
-    font-size: 14px;
+    font-size: 15px;
+}
+#google{
+    width: 160px;
+    height: 35px;
+    margin-right: 10px;
+    background-color: #ffffff21;
+    border-style: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+    font-family: sans-serif;
+    font-weight: lighter;
+}
+#facebook{
+    width: 160px;
+    height: 35px;
+    background-color: #ffffff21;
+    border-style: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 18px;
+    font-family: sans-serif;
+    font-weight: lighter;
 }
