--- a/main.css
+++ b/main.css
@@ -2,121 +2,105 @@ body{
     background-color: rgba(3, 2, 14, 0.993);
 }
 #background{
-background-color:#ffffff33;
 width: 400px;
-height: 530px;
+height: 520px;
 position: absolute;
+transform: translate(-50%, -50%);
 left: 50%;
 top: 50%;
-transform: translate(-50%, -50%);
-border-radius: 10px;
 }
 .circle{
-    background: linear-gradient(#0552aa ,#109fd8);
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    position: absolute;
-    right: 50%;
-    top: 3%;
-    transform: translate(-90px, -90px);
+    position: absolute;  
 }
-.circle1{
-    background: linear-gradient(#97510f ,#f5a021);
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    position: absolute;
-    left: 50%;
-    top: 60%;
-    transform: translate(90px, 90px);   
+.circle:first-child{
+    background: linear-gradient(#1845ab ,#23a2f6); 
+    left: -95px;
+    top: -80px;
+}   
+.circle:last-child{
+    background: linear-gradient(#ff5124 ,#f09819);
+    right: -95px;
+    bottom: -80px;
 }
 form{
-    width: 390px;
-    height: 530px;
+    width: 396px;
+    height: 518px;
     position: absolute;
+    transform: translate(-50%, -50%);
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
-    margin-left: 30px;
+    background-color: #ffffff21;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border-color: rgba(255, 255, 255, 0.116);
+    border-style: solid;
+    border-width: 2px;
+    /*box-shadow: 0 0 40px rgba(255, 255, 255, 0.733);*/
+    
+}
+form * {
+    color: white;
+    outline: none;
+    border: none;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 0.2px;
+    margin-top: 50px;
+    margin-left: 36px;
+    
 }
 h1{
-
-    color: white;
-    font-family: sans-serif;
-    font-weight:lighter ;
-    margin-top: 15%;
-    margin-bottom: 8%;
-    text-indent: 85px;
-    
-   
-}
-label{
-    color: white;
-    font-size: 17px;
-    font-family: sans-serif;
+    font-size: 32px;
+    line-height: 42px;
+    text-align: center;
     font-weight: lighter;
 }
-#username{
-    width: 325px;
-    height: 48px;
-    margin-right: 8px;
-    margin-top: 8px;
-    margin-bottom: 8%;
-    border-radius: 5px;
-    background-color: #ffffff21;
-    border-style: none;
-    text-indent: 8px;
+label {
+display: block;
+margin-top: 30px;
+font-size: 17px;
 }
-#password{
-    width: 325px;
-    height: 48px;
-    margin-right: 8px;
-    margin-bottom: 12%;
-    margin-top: 8px;
-    border-radius: 5px;
-    background-color: #ffffff21;
-    border-style: none;
-    text-indent: 8px;
-    
-}
-#button{
-    width: 330px;
+input {
+    display: block;
     height: 50px;
-    margin-right: 5%;
-    margin-bottom: 8%;
-    font-size: 18px;
-    font-family: sans-serif;
-    font-weight: bold;
-    border-radius: 5px;
-    border-style: none;
-    background-color: #ffffff;
+    width: 310px;
+    background-color: rgba(255, 255, 255, 0.07);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+
 }
 ::placeholder{
-    color: rgba(255, 255, 255, 0.733);
-    font-family: sans-serif;
-    font-size: 15px;
+    color: #e5e5e5e0;
 }
-#google{
-    width: 160px;
-    height: 35px;
-    margin-right: 10px;
-    background-color: #ffffff21;
-    border-style: none;
-    border-radius: 5px;
-    color: white;
+#button{
+    margin-top: 50px;
+    width: 330px;
+    background-color: white;
+    color: black;
+    padding: 15px 0;
     font-size: 18px;
-    font-family: sans-serif;
-    font-weight: lighter;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
 }
-#facebook{
-    width: 160px;
-    height: 35px;
-    background-color: #ffffff21;
-    border-style: none;
-    border-radius: 5px;
-    color: white;
-    font-size: 18px;
-    font-family: sans-serif;
+.socials {
+    width: 150px;
+    height: 40px;
+    background-color: #ffffff4f;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 30px;
+    font-size: 17px;
     font-weight: lighter;
+    color: white;
+    border-style: none;
+    border-radius: 4px;
+    cursor: text;
+}
+.socials:first-child {
+    
 }
